--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <header>
         <nav class="navigation">
-            <p class="white-1 roboto-f l-height-24 f-size-18">John Doe</p>
+            <a href="https://www.linkedin.com/in/gerson-sanchez-88309b57/" class="white-1 roboto-f l-height-24 f-size-18">John Doe</a>
             <img class="menu" src="hamburguer.png" alt="">
         </nav>
     </header>
