--- a/index.html
+++ b/index.html
@@ -13,20 +13,18 @@
 
     <header>
         <nav class="navigation">
-            <a href="https://www.linkedin.com/in/gerson-sanchez-88309b57/" class="white-1 roboto-f l-height-24 f-size-18">John Doe</a>
+            <a class="white-1 roboto-f l-height-24 f-size-18">John Doe</a>
             <img class="menu" src="hamburguer.png" alt="">
         </nav>
     </header>
 
-
     <div class="wrapper">
 
-        <div class="profile">
-            <p class="orange crete-f f-weight400 l-height-46 f-size-56">Hey There. I'm Gerson
-            <p>
-            <p class="white-1 roboto-f f-weight700 l-height-24 f-size-26">I am a software developer
-            <p>
-                <a href="https://www.linkedin.com/in/gerson-sanchez-88309b57/">
+        <section class="profile">
+            <h1 class="orange crete-f f-weight400 l-height-46 f-size-56">Hey There. I'm Gerson
+            </h1>>
+            <h2 class="white-1 roboto-f f-weight700 l-height-24 f-size-26">I am a software developer
+            </h2>
                     <p class="white-1 popins-f l-height-24 f-size-16">I can help you build a product, feature or
                         website. Take a
                         look of my works. If you like what you see and have a project you need coded, don’t hesitate
@@ -34,7 +32,6 @@
                         contact
                         me.
                     </p>
-                </a>
 
             <div class="social">
                 <ul>
@@ -47,7 +44,7 @@
                 </ul>
 
             </div>
-        </div>
+        </section>
 
     </div> <!-- WRAPPER END -->
 
@@ -86,10 +83,7 @@
                 Project</a>
         </div>
 
-
     </div> <!-- WORKS END -->
-
-
 
 </body>
 
