--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
     <header>
         <nav class="navigation">
-            <a class="white-1 roboto-f l-height-24 f-size-18">John Doe</a>
-            <img class="menu" src="hamburguer.png" alt="">
+            <a href="https://www.linkedin.com/in/gerson-sanchez-88309b57/" class="white-1 roboto-f l-height-24 f-size-18">John Doe</a>
+            <img class="menu" src="img\hamburguer.png" alt="">
         </nav>
     </header>
 
@@ -35,25 +35,25 @@
 
             <div class="social">
                 <ul>
-                    <li><a href="https://github.com/gealsanchez"><img src="github.svg" alt=""></a></li>
-                    <li><a href="https://www.linkedin.com/in/gerson-sanchez-88309b57/"><img src="Linkedin icon.svg"
+                    <li><a href="https://github.com/gealsanchez"><img src="img\github.svg" alt=""></a></li>
+                    <li><a href="https://www.linkedin.com/in/gerson-sanchez-88309b57/"><img src="img\Linkedin icon.svg"
                                 alt=""></a></li>
-                    <li><a href="https://angel.co/"><img src="angel list.svg" alt=""></a></li>
-                    <li><a href="https://twitter.com/gealsanchez"><img src="twitter.svg" alt=""></a></li>
-                    <li> <a href="https://medium.com/tag/javascript"><img src="medium.svg" alt=""></a></li>
+                    <li><a href="https://angel.co/"><img src="img\angel list.svg" alt=""></a></li>
+                    <li><a href="https://twitter.com/gealsanchez"><img src="img\twitter.svg" alt=""></a></li>
+                    <li> <a href="https://medium.com/tag/javascript"><img src="img\medium.svg" alt=""></a></li>
                 </ul>
 
             </div>
         </section>
 
-    </div> <!-- WRAPPER END -->
+    </div> <!-- PROFILE MODULE END -->
 
     <div class="works">
 
         <p class="center crete-f f-weight400 l-height-52 f-size-40">My Recent Works
         <p>
             <hr class="rule center">
-            <img class="center" src="Img Placeholder.png" alt="">
+            <img class="center" src="img\Img Placeholder.png" alt="">
         <p class="crete-f f-weight400 l-height-44 f-size-32">Multi-Post Stories
         <p>
         <p class="inter-f f-weight400 l-height-24 f-size-16">A daily selection of privately personalized reads; no
@@ -78,12 +78,90 @@
                 </a>
             </ul>
         </div>
+
         <div class="buttonproject">
             <a class="inter-f f-weight700 l-height-24 f-size-17" href="https://gealsanchez.github.io/LandingPage/">See
                 Project</a>
         </div>
 
-    </div> <!-- WORKS END -->
+
+    </div> <!-- WORKS MODULE END -->
+
+    <div class="project-1">
+
+        <p class="white-1 crete-f f-weight400 l-height-44 f-size-32 ">Profesional Art Printing Data</p>
+        <p class="white-1 inter-f f-weight400 l-height-24 f-size-17">A daily selection of privately personalized reads;
+            no
+            accounts or
+            sign-ups required. has been the
+            industry's standard</p>
+
+        <div class="project">
+            <ul>
+                <a href="https://medium.com/tag/html">
+                    <li>html</li>
+                </a>
+                <a href="https://medium.com/tag/bootstrap">
+                    <li>bootstrap</li>
+                </a>
+                <a href="https://medium.com/tag/ruby-on-rails">
+                    <li>Ruby</li>
+                </a>
+            </ul>
+        </div>
+
+    </div>
+
+    <div class="buttonproject-1">
+        <a class="inter-f f-weight700 l-height-24 f-size-17" href="https://gealsanchez.github.io/LandingPage/">See
+            Project</a>
+    </div> <!-- PROJECTS MODULE END -->
+
+    <div class="about">
+
+        <p class="orange crete-f f-weight400 l-height-88 f-size-72 ">About Me</p>
+        <p class="white-1 inter-f f-weight400 l-height-24 f-size-17">I can help you build a product, feature or
+            website. Take a
+            look of my works. If you like what you see and have a project you need coded, don’t hesitate and contact
+            me.
+        </p>
+
+        <div class="buttonproject">
+            <a class="inter-f f-weight700 l-height-24 f-size-17"
+                href="https://www.linkedin.com/in/gerson-sanchez-88309b57/">Get
+                My Resume</a>
+        </div>
+
+
+
+    </div> <!-- ABOUT MODULE END -->
+
+    <div class="languages">
+        <hr class="rule-2 ">
+        <div class="language">
+            <ul>
+                <li class="f-weight700 l-height-44 f-size-32"><img src="img\Rectangle 55.png" alt=""> Languages</li>
+                <li>Javascript</li>
+                <li>Ruby</li>
+                <li>Html</li>
+                <li>Css</li>
+                <li class="f-weight700 l-height-44 f-size-32"><img src="img\Rectangle 56.png" alt=""> Frameworks</li>
+                <li>Bootstrap</li>
+                <li>Ruby on Rails</li>
+                <li>RSPec</li>
+                <li>CapyBara</li>
+                <li>Selenium</li>
+                <li class="f-weight700 l-height-44 f-size-32"><img src="img\Rectangle 57.png" alt=""> Skills</li>
+                <li>Codekit</li>
+                <li>Github</li>
+                <li>Codepen</li>
+                <li>Gitlab</li>
+                <li>Terminal</li>
+            </ul>
+        </div>
+
+    </div>
+
 
 </body>
 
