index.html update, contact form elements added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
     <header>
         <nav class="navigation">
-            <a href="https://www.linkedin.com/in/gerson-sanchez-88309b57/" class="white-1 roboto-f l-height-24 f-size-18">John Doe</a>
+            <a href="https://www.linkedin.com/in/gerson-sanchez-88309b57/"
+                class="white-1 roboto-f l-height-24 f-size-18">John Doe</a>
             <img class="menu" src="img\hamburguer.png" alt="">
         </nav>
     </header>
@@ -22,16 +23,16 @@
 
         <section class="profile">
             <h1 class="orange crete-f f-weight400 l-height-46 f-size-56">Hey There. I'm Gerson
-            </h1>>
+            </h1>
             <h2 class="white-1 roboto-f f-weight700 l-height-24 f-size-26">I am a software developer
             </h2>
-                    <p class="white-1 popins-f l-height-24 f-size-16">I can help you build a product, feature or
-                        website. Take a
-                        look of my works. If you like what you see and have a project you need coded, don’t hesitate
-                        and
-                        contact
-                        me.
-                    </p>
+            <p class="white-1 popins-f l-height-24 f-size-16">I can help you build a product, feature or
+                website. Take a
+                look of my works. If you like what you see and have a project you need coded, don’t hesitate
+                and
+                contact
+                me.
+            </p>
 
             <div class="social">
                 <ul>
@@ -51,11 +52,11 @@
     <div class="works">
 
         <p class="center crete-f f-weight400 l-height-52 f-size-40">My Recent Works
-        <p>
-            <hr class="rule center">
-            <img class="center" src="img\Img Placeholder.png" alt="">
+        </p>
+        <hr class="rule center">
+        <img class="center" src="img\Img Placeholder.png" alt="">
         <p class="crete-f f-weight400 l-height-44 f-size-32">Multi-Post Stories
-        <p>
+        </p>
         <p class="inter-f f-weight400 l-height-24 f-size-16">A daily selection of privately personalized reads; no
             accounts or
             sign-ups required. has been the
@@ -84,37 +85,214 @@
                 Project</a>
         </div>
 
-
     </div> <!-- WORKS MODULE END -->
 
-    <div class="project-1">
+    <div class="desktopversion">
 
-        <p class="white-1 crete-f f-weight400 l-height-44 f-size-32 ">Profesional Art Printing Data</p>
-        <p class="white-1 inter-f f-weight400 l-height-24 f-size-17">A daily selection of privately personalized reads;
-            no
-            accounts or
-            sign-ups required. has been the
-            industry's standard</p>
+        <div class="webitem">
+            <div class="project-1">
 
-        <div class="project">
-            <ul>
-                <a href="https://medium.com/tag/html">
-                    <li>html</li>
-                </a>
-                <a href="https://medium.com/tag/bootstrap">
-                    <li>bootstrap</li>
-                </a>
-                <a href="https://medium.com/tag/ruby-on-rails">
-                    <li>Ruby</li>
-                </a>
-            </ul>
+                <p class="white-1 crete-f f-weight400 l-height-44 f-size-32 ">Profesional Art Printing Data</p>
+                <p class="white-1 inter-f f-weight400 l-height-24 f-size-17">A daily selection of privately personalized
+                    reads;
+                    no
+                    accounts or
+                    sign-ups required. has been the
+                    industry's standard</p>
+
+                <div class="project-2">
+                    <ul>
+                        <a href="https://medium.com/tag/html">
+                            <li>html</li>
+                        </a>
+                        <a href="https://medium.com/tag/bootstrap">
+                            <li>bootstrap</li>
+                        </a>
+                        <a href="https://medium.com/tag/ruby-on-rails">
+                            <li>Ruby</li>
+                        </a>
+                    </ul>
+                </div>
+
+            </div>
+
+            <div class="buttonproject-1">
+                <a class="inter-f f-weight700 l-height-24 f-size-17"
+                    href="https://gealsanchez.github.io/LandingPage/">See
+                    Project</a>
+            </div>
         </div>
 
-    </div>
+        <div class="webitem">
+            <div class="project-1">
 
-    <div class="buttonproject-1">
-        <a class="inter-f f-weight700 l-height-24 f-size-17" href="https://gealsanchez.github.io/LandingPage/">See
-            Project</a>
+                <p class="white-1 crete-f f-weight400 l-height-44 f-size-32 ">Profesional Art Printing Data</p>
+                <p class="white-1 inter-f f-weight400 l-height-24 f-size-17">A daily selection of privately personalized
+                    reads;
+                    no
+                    accounts or
+                    sign-ups required. has been the
+                    industry's standard</p>
+
+                <div class="project-2">
+                    <ul>
+                        <a href="https://medium.com/tag/html">
+                            <li>html</li>
+                        </a>
+                        <a href="https://medium.com/tag/bootstrap">
+                            <li>bootstrap</li>
+                        </a>
+                        <a href="https://medium.com/tag/ruby-on-rails">
+                            <li>Ruby</li>
+                        </a>
+                    </ul>
+                </div>
+
+            </div>
+
+            <div class="buttonproject-1">
+                <a class="inter-f f-weight700 l-height-24 f-size-17"
+                    href="https://gealsanchez.github.io/LandingPage/">See
+                    Project</a>
+            </div>
+        </div>
+
+        <div class="webitem">
+            <div class="project-1">
+
+                <p class="white-1 crete-f f-weight400 l-height-44 f-size-32 ">Profesional Art Printing Data</p>
+                <p class="white-1 inter-f f-weight400 l-height-24 f-size-17">A daily selection of privately personalized
+                    reads;
+                    no
+                    accounts or
+                    sign-ups required. has been the
+                    industry's standard</p>
+
+                <div class="project-2">
+                    <ul>
+                        <a href="https://medium.com/tag/html">
+                            <li>html</li>
+                        </a>
+                        <a href="https://medium.com/tag/bootstrap">
+                            <li>bootstrap</li>
+                        </a>
+                        <a href="https://medium.com/tag/ruby-on-rails">
+                            <li>Ruby</li>
+                        </a>
+                    </ul>
+                </div>
+
+            </div>
+
+            <div class="buttonproject-1">
+                <a class="inter-f f-weight700 l-height-24 f-size-17"
+                    href="https://gealsanchez.github.io/LandingPage/">See
+                    Project</a>
+            </div>
+        </div>
+
+        <div class="webitem">
+            <div class="project-1">
+
+                <p class="white-1 crete-f f-weight400 l-height-44 f-size-32 ">Profesional Art Printing Data</p>
+                <p class="white-1 inter-f f-weight400 l-height-24 f-size-17">A daily selection of privately personalized
+                    reads;
+                    no
+                    accounts or
+                    sign-ups required. has been the
+                    industry's standard</p>
+
+                <div class="project-2">
+                    <ul>
+                        <a href="https://medium.com/tag/html">
+                            <li>html</li>
+                        </a>
+                        <a href="https://medium.com/tag/bootstrap">
+                            <li>bootstrap</li>
+                        </a>
+                        <a href="https://medium.com/tag/ruby-on-rails">
+                            <li>Ruby</li>
+                        </a>
+                    </ul>
+                </div>
+
+            </div>
+
+            <div class="buttonproject-1">
+                <a class="inter-f f-weight700 l-height-24 f-size-17"
+                    href="https://gealsanchez.github.io/LandingPage/">See
+                    Project</a>
+            </div>
+        </div>
+
+        <div class="webitem">
+            <div class="project-1">
+
+                <p class="white-1 crete-f f-weight400 l-height-44 f-size-32 ">Profesional Art Printing Data</p>
+                <p class="white-1 inter-f f-weight400 l-height-24 f-size-17">A daily selection of privately personalized
+                    reads;
+                    no
+                    accounts or
+                    sign-ups required. has been the
+                    industry's standard</p>
+
+                <div class="project-2">
+                    <ul>
+                        <a href="https://medium.com/tag/html">
+                            <li>html</li>
+                        </a>
+                        <a href="https://medium.com/tag/bootstrap">
+                            <li>bootstrap</li>
+                        </a>
+                        <a href="https://medium.com/tag/ruby-on-rails">
+                            <li>Ruby</li>
+                        </a>
+                    </ul>
+                </div>
+
+            </div>
+
+            <div class="buttonproject-1">
+                <a class="inter-f f-weight700 l-height-24 f-size-17"
+                    href="https://gealsanchez.github.io/LandingPage/">See
+                    Project</a>
+            </div>
+        </div>
+
+        <div class="webitem">
+            <div class="project-1">
+
+                <p class="white-1 crete-f f-weight400 l-height-44 f-size-32 ">Profesional Art Printing Data</p>
+                <p class="white-1 inter-f f-weight400 l-height-24 f-size-17">A daily selection of privately personalized
+                    reads;
+                    no
+                    accounts or
+                    sign-ups required. has been the
+                    industry's standard</p>
+
+                <div class="project-2">
+                    <ul>
+                        <a href="https://medium.com/tag/html">
+                            <li>html</li>
+                        </a>
+                        <a href="https://medium.com/tag/bootstrap">
+                            <li>bootstrap</li>
+                        </a>
+                        <a href="https://medium.com/tag/ruby-on-rails">
+                            <li>Ruby</li>
+                        </a>
+                    </ul>
+                </div>
+
+            </div>
+
+            <div class="buttonproject-1">
+                <a class="inter-f f-weight700 l-height-24 f-size-17"
+                    href="https://gealsanchez.github.io/LandingPage/">See
+                    Project</a>
+            </div>
+        </div>
+
     </div> <!-- PROJECTS MODULE END -->
 
     <div class="about">
@@ -131,8 +309,6 @@
                 href="https://www.linkedin.com/in/gerson-sanchez-88309b57/">Get
                 My Resume</a>
         </div>
-
-
 
     </div> <!-- ABOUT MODULE END -->
 
@@ -162,6 +338,42 @@
 
     </div>
 
+    <div class="contact">
+        <p class="inter-f f-weight700 f-size-32 l-height-44 center">I am always interested in hearing about new
+            projects, so if
+            you like to chat please get in</p>
+
+        <form action="https://formspree.io/f/meqdkpzn" method="POST">
+            <label>
+                <input type="name" name="name" placeholder="Full name" maxlength="30">
+            </label>
+            <hr class="rule-2">
+            <label>
+                <input type="email" name="email" placeholder="Email address">
+            </label>
+            <hr class="rule-2">
+            <label>
+                <textarea name="message" placeholder="Enter text here" maxlength="500"></textarea>
+            </label>
+            <button type="submit" class="white-1 inter-f f-weight700 l-height-24 f-size-17">Get in touch</button>
+        </form>
+    </div>
+    <hr class="rule-3">
+
+    <footer>
+        <div class="social gray">
+            <ul>
+                <li><a href="https://github.com/gealsanchez"><img src="img\github.svg" alt=""></a></li>
+                <li><a href="https://www.linkedin.com/in/gerson-sanchez-88309b57/"><img src="img\Linkedin icon.svg"
+                            alt=""></a></li>
+                <li><a href="https://angel.co/"><img src="img\angel list.svg" alt=""></a></li>
+                <li><a href="https://twitter.com/gealsanchez"><img src="img\twitter.svg" alt=""></a></li>
+                <li> <a href="https://medium.com/tag/javascript"><img src="img\medium.svg" alt=""></a></li>
+            </ul>
+
+        </div>
+        <hr class="rule-4">
+    </footer>
 
 </body>
 
