--- a/index.html
+++ b/index.html
@@ -16,6 +16,24 @@
             <a href="https://www.linkedin.com/in/gerson-sanchez-88309b57/"
                 class="white-1 roboto-f l-height-24 f-size-18">John Doe</a>
             <img class="menu" src="img\hamburguer.png" alt="">
+
+            <div class="desktopmenu">
+                <ul>
+                    <a href="#">
+                        <li>Portfolio</li>
+                    </a>
+                    <a href="#">
+                        <li>About</li>
+                    </a>
+                    <a href="#">
+                        <li>Contact</li>
+                    </a>
+                    <a href="#"><img src="img\Disabled.png" alt="">
+                        <li></li>
+                    </a>
+                </ul>
+            </div>
+
         </nav>
     </header>
 
@@ -52,7 +70,7 @@
     <div class="works">
 
 
-        <h1 class="crete-f f-weight400 l-height-52 f-size-40">My Recent Works 
+        <h1 class="crete-f f-weight400 l-height-52 f-size-40">My Recent Works
         </h1>
         <hr class="rule">
         <img src="img\Img Placeholder.png" alt="">
