index.html accesibility update

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="navigation">
             <a href="https://www.linkedin.com/in/gerson-sanchez-88309b57/"
                 class="white-1 roboto-f l-height-24 f-size-18">John Doe</a>
-            <img class="menu" src="img\hamburguer.png" alt="">
+            <img class="menu" src="img\hamburguer.png" alt="Hamburguer menu">
 
             <div class="desktopmenu">
                 <ul>
@@ -28,7 +28,7 @@
                     <a href="#">
                         <li>Contact</li>
                     </a>
-                    <a href="#"><img src="img\Disabled.png" alt="">
+                    <a href="#"><img src="img\Disabled.png" alt="Mail icon">
                         <li></li>
                     </a>
                 </ul>
@@ -54,12 +54,12 @@
 
             <div class="social">
                 <ul>
-                    <li><a href="https://github.com/gealsanchez"><img src="img\github.svg" alt=""></a></li>
+                    <li><a href="https://github.com/gealsanchez"><img src="img\github.svg" alt="Github icon"></a></li>
                     <li><a href="https://www.linkedin.com/in/gerson-sanchez-88309b57/"><img src="img\Linkedin icon.svg"
-                                alt=""></a></li>
-                    <li><a href="https://angel.co/"><img src="img\angel list.svg" alt=""></a></li>
-                    <li><a href="https://twitter.com/gealsanchez"><img src="img\twitter.svg" alt=""></a></li>
-                    <li> <a href="https://medium.com/tag/javascript"><img src="img\medium.svg" alt=""></a></li>
+                                alt="Linkedin icon"></a></li>
+                    <li><a href="https://angel.co/"><img src="img\angel list.svg" alt="Angel list icon"></a></li>
+                    <li><a href="https://twitter.com/gealsanchez"><img src="img\twitter.svg" alt="Twitter icon"></a></li>
+                    <li> <a href="https://medium.com/tag/javascript"><img src="img\medium.svg" alt="Twitter icon"></a></li>
                 </ul>
 
             </div>
@@ -73,7 +73,7 @@
         <h1 class="crete-f f-weight400 l-height-52 f-size-40">My Recent Works
         </h1>
         <hr class="rule">
-        <img src="img\Img Placeholder.png" alt="">
+        <img src="img\Img Placeholder.png" alt="Project Image">
 
         <div class="description">
             <h2 class="crete-f f-weight400 l-height-44 f-size-32">Multi-Post Stories
@@ -338,14 +338,14 @@
         <hr class="rule-2 ">
         <div class="language">
             <ul>
-                <li class="f-weight700 l-height-44 f-size-32 flex"><img src="img\Rectangle 55.png" alt=""> Language</li>
+                <li class="f-weight700 l-height-44 f-size-32 flex"><img src="img\Rectangle 55.png" alt="Language list icon"> Language</li>
                 <li>Javascript</li>
                 <li>Ruby</li>
                 <li>Html</li>
                 <li>Css</li>
             </ul>
             <ul>
-                <li class="f-weight700 l-height-44 f-size-32 flex"><img src="img\Rectangle 56.png" alt=""> Frameworks
+                <li class="f-weight700 l-height-44 f-size-32 flex"><img src="img\Rectangle 56.png" alt="Frameworks list icon"> Frameworks
                 </li>
                 <li>Bootstrap</li>
                 <li>Ruby on Rails</li>
@@ -354,7 +354,7 @@
                 <li>Selenium</li>
             </ul>
             <ul>
-                <li class=" flex f-weight700 l-height-44 f-size-32"><img src="img\Rectangle 57.png" alt=""> Skills</li>
+                <li class=" flex f-weight700 l-height-44 f-size-32"><img src="img\Rectangle 57.png" alt="Skills list icon"> Skills</li>
                 <li>Codekit</li>
                 <li>Github</li>
                 <li>Codepen</li>
@@ -390,12 +390,12 @@
     <footer>
         <div class="social gray">
             <ul>
-                <li><a href="https://github.com/gealsanchez"><img src="img\github.svg" alt=""></a></li>
+                <li><a href="https://github.com/gealsanchez"><img src="img\github.svg" alt="Github icon"></a></li>
                 <li><a href="https://www.linkedin.com/in/gerson-sanchez-88309b57/"><img src="img\Linkedin icon.svg"
-                            alt=""></a></li>
-                <li><a href="https://angel.co/"><img src="img\angel list.svg" alt=""></a></li>
-                <li><a href="https://twitter.com/gealsanchez"><img src="img\twitter.svg" alt=""></a></li>
-                <li> <a href="https://medium.com/tag/javascript"><img src="img\medium.svg" alt=""></a></li>
+                            alt="Linkedin icon"></a></li>
+                <li><a href="https://angel.co/"><img src="img\angel list.svg" alt="Angel list icon"></a></li>
+                <li><a href="https://twitter.com/gealsanchez"><img src="img\twitter.svg" alt="Twitter icon"></a></li>
+                <li> <a href="https://medium.com/tag/javascript"><img src="img\medium.svg" alt="Medium icon"></a></li>
             </ul>
 
         </div>
