add images for mobile menu and work on script for opening and ending of mobile menu

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="navigation">
             <a href="https://www.linkedin.com/in/gerson-sanchez-88309b57/"
                 class="white-1 roboto-f l-height-24 f-size-18">John Doe</a>
-            <img class="menu" src="img\hamburguer.png" alt="">
+           <a href="#" class="bars"> <img class="menu" src="img\hamburguer.png" alt="hamburger-logo"></a>
 
             <div class="desktopmenu">
                 <ul>
@@ -401,6 +401,17 @@
         </div>
         <hr class="rule-4">
     </footer>
+
+    <div class="open">
+        <div class="close">
+            <a href="#"> <img src="img/Icon.png" alt=""></a>
+
+        </div>
+    </div>
+   
+     <script src="main.js">
+     </script>
+
 
 </body>
 
