add syntax of mobile menu

--- a/index.html
+++ b/index.html
@@ -407,6 +407,12 @@
             <a href="#"> <img src="img/Icon.png" alt=""></a>
 
         </div>
+
+        <ul class="main-menu">
+            <li><a class="menu-item" href="#portfolio-section">Add your text here</a></li>
+            <li><a class="menu-item" href="#Avout-section">Add your heading here</a></li>
+            <li><a class="menu-item" href="#Contact-section">Add you rheading here</a></li>
+        </ul>
     </div>
    
      <script src="main.js">
