--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <nav class="navigation">
             <a href="https://www.linkedin.com/in/gerson-sanchez-88309b57/"
                 class="white-1 roboto-f l-height-24 f-size-18">John Doe</a>
-           <a href="#" class="bars"> <img class="menu" src="img\hamburguer.png" alt="hamburger-logo"></a>
+            <img class="menu bars" src="img\hamburguer.svg" alt="">
+
 
             <div class="desktopmenu">
                 <ul>
@@ -68,8 +69,7 @@
     </div> <!-- PROFILE MODULE END -->
 
     <div class="works">
-
-
+        <a href="#" name="works"></a>
         <h1 class="crete-f f-weight400 l-height-52 f-size-40">My Recent Works
         </h1>
         <hr class="rule">
@@ -318,6 +318,7 @@
     </div> <!-- PROJECTS MODULE END -->
 
     <div class="about">
+        <a href="#" name="about"></a>
 
         <h1 class="orange crete-f f-weight400 l-height-88 f-size-72 ">About Me</h1>
         <p class="white-1 inter-f f-weight400 l-height-24 f-size-17">I can help you build a product, feature or
@@ -366,6 +367,7 @@
     </div>
 
     <div class="contact">
+        <a href="#" name="contact"></a>
         <p class="inter-f f-weight700 f-size-32 l-height-44 center">I am always interested in hearing about new
             projects, so if
             you like to chat please get in touch</p>
@@ -405,19 +407,11 @@
     <div class="open">
         <div class="close">
             <a href="#"> <img src="img/Icon.png" alt=""></a>
-
         </div>
 
-        <ul class="main-menu">
-            <li><a class="menu-item" href="#portfolio-section">Add your text here</a></li>
-            <li><a class="menu-item" href="#Avout-section">Add your heading here</a></li>
-            <li><a class="menu-item" href="#Contact-section">Add you rheading here</a></li>
-        </ul>
     </div>
-   
-     <script src="main.js">
-     </script>
 
+    <script src="portfolio.js"></script>
 
 </body>
 
