add html with updated form

--- a/index.html
+++ b/index.html
@@ -374,17 +374,18 @@
 
         <form action="https://formspree.io/f/meqdkpzn" method="POST">
             <label>
-                <input type="name" name="name" placeholder="Full name" maxlength="30">
+                <input type="name" id="name" name="name" placeholder="Full name" maxlength="30">
             </label>
             <hr class="rule-5">
             <label>
-                <input type="email" name="email" placeholder="Email address">
+                <input type="email" id="mail" name="email" placeholder="Email address">
             </label>
             <hr class="rule-5">
             <label>
-                <textarea name="message" placeholder="Enter text here" maxlength="500"></textarea>
+                <textarea name="message" id="message-text" placeholder="Enter text here" maxlength="500"></textarea>
             </label>
             <button type="submit" class="white-1 inter-f f-weight700 l-height-24 f-size-17">Get in touch</button>
+         <div class="mesg"></div>
         </form>
     </div>
     <hr class="rule-3">
