--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                 My Resume</a>
         </div>
 
-    </div> <!-- ABOUT MODULE END -->
+    </div> 
 
     <div class="languages">
         <hr class="rule-2 ">
@@ -393,8 +393,7 @@
         <div class="social gray">
             <ul>
                 <li><a href="https://github.com/gealsanchez"><img src="img\github.svg" alt=""></a></li>
-                <li><a href="https://www.linkedin.com/in/gerson-sanchez-88309b57/"><img src="img\Linkedin icon.svg"
-                            alt=""></a></li>
+                <li><a href="https://www.linkedin.com/in/gerson-sanchez-88309b57/"><img src="img\Linkedin icon.svg" alt=""></a></li>
                 <li><a href="https://angel.co/"><img src="img\angel list.svg" alt=""></a></li>
                 <li><a href="https://twitter.com/gealsanchez"><img src="img\twitter.svg" alt=""></a></li>
                 <li> <a href="https://medium.com/tag/javascript"><img src="img\medium.svg" alt=""></a></li>
