--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
                 class="white-1 roboto-f l-height-24 f-size-18">John Doe</a>
             <img class="menu bars" src="img\hamburguer.svg" alt="">
 
-
             <div class="desktopmenu">
                 <ul>
                     <a href="#">
@@ -68,12 +67,13 @@
 
     </div> <!-- PROFILE MODULE END -->
 
-    <div class="works">
-        <a href="#" name="works"></a>
+    <div id="portfolio" class="works">
+
+
         <h1 class="crete-f f-weight400 l-height-52 f-size-40">My Recent Works
         </h1>
         <hr class="rule">
-        <img src="img\Img Placeholder.png" alt="">
+        <img class="overlayproject" src="img\Img Placeholder.png" alt="">
 
         <div class="description">
             <h2 class="crete-f f-weight400 l-height-44 f-size-32">Multi-Post Stories
@@ -85,7 +85,7 @@
             </p>
         </div>
 
-        <div class="project">
+        <div class="projectlist">
             <ul>
                 <a href="https://medium.com/tag/css">
                     <li>css</li>
@@ -102,223 +102,18 @@
             </ul>
         </div>
 
-        <div class="buttonproject">
+        <div class="button1">
             <a class="inter-f f-weight700 l-height-24 f-size-17" href="https://gealsanchez.github.io/LandingPage/">See
                 Project</a>
         </div>
 
     </div> <!-- WORKS MODULE END -->
 
-    <div class="desktopversion">
-
-        <div class="webitem-1">
-            <div class="project-1">
-
-                <h1 class="white-1 crete-f f-weight400 l-height-44 f-size-32 ">Profesional Art Printing Data</h1>
-                <p class="white-1 inter-f f-weight400 l-height-24 f-size-17">A daily selection of privately personalized
-                    reads;
-                    no
-                    accounts or
-                    sign-ups required. has been the
-                    industry's standard</p>
-
-                <div class="project-2">
-                    <ul>
-                        <a href="https://medium.com/tag/html">
-                            <li>html</li>
-                        </a>
-                        <a href="https://medium.com/tag/bootstrap">
-                            <li>bootstrap</li>
-                        </a>
-                        <a href="https://medium.com/tag/ruby-on-rails">
-                            <li>Ruby</li>
-                        </a>
-                    </ul>
-                </div>
-
-                <div class="buttonproject-1">
-                    <a href="https://gealsanchez.github.io/LandingPage/">See
-                        Project</a>
-                </div>
-
-            </div>
-
-        </div>
-
-        <div class="webitem-2">
-            <div class="project-1">
-
-                <h1 class="white-1 crete-f f-weight400 l-height-44 f-size-32 ">Profesional Art Printing Data</h1>
-                <p class="white-1 inter-f f-weight400 l-height-24 f-size-17">A daily selection of privately personalized
-                    reads;
-                    no
-                    accounts or
-                    sign-ups required. has been the
-                    industry's standard</p>
-
-                <div class="project-2">
-                    <ul>
-                        <a href="https://medium.com/tag/html">
-                            <li>html</li>
-                        </a>
-                        <a href="https://medium.com/tag/bootstrap">
-                            <li>bootstrap</li>
-                        </a>
-                        <a href="https://medium.com/tag/ruby-on-rails">
-                            <li>Ruby</li>
-                        </a>
-                    </ul>
-                </div>
-
-                <div class="buttonproject-1">
-                    <a href="https://gealsanchez.github.io/LandingPage/">See
-                        Project</a>
-                </div>
-
-            </div>
-
-        </div>
-
-        <div class="webitem-3">
-            <div class="project-1">
-
-                <h1 class="white-1 crete-f f-weight400 l-height-44 f-size-32 ">Profesional Art Printing Data</h1>
-                <p class="white-1 inter-f f-weight400 l-height-24 f-size-17">A daily selection of privately personalized
-                    reads;
-                    no
-                    accounts or
-                    sign-ups required. has been the
-                    industry's standard</p>
-
-                <div class="project-2">
-                    <ul>
-                        <a href="https://medium.com/tag/html">
-                            <li>html</li>
-                        </a>
-                        <a href="https://medium.com/tag/bootstrap">
-                            <li>bootstrap</li>
-                        </a>
-                        <a href="https://medium.com/tag/ruby-on-rails">
-                            <li>Ruby</li>
-                        </a>
-                    </ul>
-                </div>
-
-                <div class="buttonproject-1">
-                    <a href="https://gealsanchez.github.io/LandingPage/">See
-                        Project</a>
-                </div>
-
-            </div>
-
-        </div>
-
-        <div class="webitem-4">
-            <div class="project-1">
-
-                <h1 class="white-1 crete-f f-weight400 l-height-44 f-size-32 ">Profesional Art Printing Data</h1>
-                <p class="white-1 inter-f f-weight400 l-height-24 f-size-17">A daily selection of privately personalized
-                    reads;
-                    no
-                    accounts or
-                    sign-ups required. has been the
-                    industry's standard</p>
-
-                <div class="project-2">
-                    <ul>
-                        <a href="https://medium.com/tag/html">
-                            <li>html</li>
-                        </a>
-                        <a href="https://medium.com/tag/bootstrap">
-                            <li>bootstrap</li>
-                        </a>
-                        <a href="https://medium.com/tag/ruby-on-rails">
-                            <li>Ruby</li>
-                        </a>
-                    </ul>
-                </div>
-
-                <div class="buttonproject-1">
-                    <a href="https://gealsanchez.github.io/LandingPage/">See
-                        Project</a>
-                </div>
-
-            </div>
-
-        </div>
-
-        <div class="webitem-5">
-            <div class="project-1">
-
-                <h1 class="white-1 crete-f f-weight400 l-height-44 f-size-32 ">Profesional Art Printing Data</h1>
-                <p class="white-1 inter-f f-weight400 l-height-24 f-size-17">A daily selection of privately personalized
-                    reads;
-                    no
-                    accounts or
-                    sign-ups required. has been the
-                    industry's standard</p>
-
-                <div class="project-2">
-                    <ul>
-                        <a href="https://medium.com/tag/html">
-                            <li>html</li>
-                        </a>
-                        <a href="https://medium.com/tag/bootstrap">
-                            <li>bootstrap</li>
-                        </a>
-                        <a href="https://medium.com/tag/ruby-on-rails">
-                            <li>Ruby</li>
-                        </a>
-                    </ul>
-                </div>
-
-                <div class="buttonproject-1">
-                    <a href="https://gealsanchez.github.io/LandingPage/">See
-                        Project</a>
-                </div>
-
-            </div>
-
-        </div>
-
-        <div class="webitem-6">
-            <div class="project-1">
-
-                <h1 class="white-1 crete-f f-weight400 l-height-44 f-size-32 ">Profesional Art Printing Data</h1>
-                <p class="white-1 inter-f f-weight400 l-height-24 f-size-17">A daily selection of privately personalized
-                    reads;
-                    no
-                    accounts or
-                    sign-ups required. has been the
-                    industry's standard</p>
-
-                <div class="project-2">
-                    <ul>
-                        <a href="https://medium.com/tag/html">
-                            <li>html</li>
-                        </a>
-                        <a href="https://medium.com/tag/bootstrap">
-                            <li>bootstrap</li>
-                        </a>
-                        <a href="https://medium.com/tag/ruby-on-rails">
-                            <li>Ruby</li>
-                        </a>
-                    </ul>
-                </div>
-
-                <div class="buttonproject-1">
-                    <a href="https://gealsanchez.github.io/LandingPage/">See
-                        Project</a>
-                </div>
-
-            </div>
-
-        </div>
+    <div id="dynamic" class="desktopversion">
 
     </div> <!-- PROJECTS MODULE END -->
 
-    <div class="about">
-        <a href="#" name="about"></a>
+    <div id="about" class="about">
 
         <h1 class="orange crete-f f-weight400 l-height-88 f-size-72 ">About Me</h1>
         <p class="white-1 inter-f f-weight400 l-height-24 f-size-17">I can help you build a product, feature or
@@ -327,13 +122,13 @@
             me.
         </p>
 
-        <div class="buttonproject">
+        <div class="button1">
             <a class="inter-f f-weight700 l-height-24 f-size-17"
                 href="https://www.linkedin.com/in/gerson-sanchez-88309b57/">Get
                 My Resume</a>
         </div>
 
-    </div> 
+    </div> <!-- ABOUT MODULE END -->
 
     <div class="languages">
         <hr class="rule-2 ">
@@ -366,8 +161,7 @@
 
     </div>
 
-    <div class="contact">
-        <a href="#" name="contact"></a>
+    <div id="contact" class="contact">
         <p class="inter-f f-weight700 f-size-32 l-height-44 center">I am always interested in hearing about new
             projects, so if
             you like to chat please get in touch</p>
@@ -393,7 +187,8 @@
         <div class="social gray">
             <ul>
                 <li><a href="https://github.com/gealsanchez"><img src="img\github.svg" alt=""></a></li>
-                <li><a href="https://www.linkedin.com/in/gerson-sanchez-88309b57/"><img src="img\Linkedin icon.svg" alt=""></a></li>
+                <li><a href="https://www.linkedin.com/in/gerson-sanchez-88309b57/"><img src="img\Linkedin icon.svg"
+                            alt=""></a></li>
                 <li><a href="https://angel.co/"><img src="img\angel list.svg" alt=""></a></li>
                 <li><a href="https://twitter.com/gealsanchez"><img src="img\twitter.svg" alt=""></a></li>
                 <li> <a href="https://medium.com/tag/javascript"><img src="img\medium.svg" alt=""></a></li>
@@ -407,7 +202,10 @@
         <div class="close">
             <a href="#"> <img src="img/Icon.png" alt=""></a>
         </div>
+    </div>
 
+    <div class="openover">
+        <div class="closer"><img src="img/Icon.png" alt=""></div>
     </div>
 
     <script src="portfolio.js"></script>
